--- a/src/Components/DescriptionBox/DescriptionBox.css
+++ b/src/Components/DescriptionBox/DescriptionBox.css
@@ -1,5 +1,5 @@
 .descriptionbox {
-  margin: 5vw 9vw;
+  margin: 120px 170px;
 }
 
 .descriptionbox-navigator {
@@ -10,10 +10,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.9vw;
+  font-size: 16px;
   font-weight: 600;
-  width: 10vw;
-  height: 7vh;
+  width: 171px;
+  height: 70px;
   border: 1px solid #d0d0d0;
 }
 
@@ -25,13 +25,33 @@
 .descriptionbox-description {
   display: flex;
   flex-direction: column;
-  gap: 1vw;
+  gap: 25px;
   border: 1px solid #d0d0d0;
-  padding: 2.4vw;
-  padding-bottom: 3vw;
+  padding: 48px;
+  padding-bottom: 70px;
 }
-
+/* 
 .descriptionbox-description p {
   font-size: 1vw;
   line-height: 1.5;
+} */
+
+@media (max-width: 1280px) {
+  .descriptionbox {
+    margin: 60px;
+  }
+}
+
+@media (max-width: 1024px) {
+}
+
+@media (max-width: 800px) {
+  .descriptionbox {
+    margin: 60px 20px;
+  }
+  .descriptionbox-description {
+    font-size: 14px;
+  }
+}
+@media (max-width: 500px) {
 }
