--- a/src/Components/Offers/Offers.css
+++ b/src/Components/Offers/Offers.css
@@ -1,10 +1,10 @@
 .offers {
-  width: 60vw;
-  height: 70vh;
+  width: 65%;
+  height: 60vh;
   display: flex;
   margin: auto;
-  padding: 0vw 10vw;
-  margin: 10vh auto;
+  padding: 0px 140px;
+  margin-bottom: 150px;
   background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
 }
 
@@ -17,26 +17,26 @@
 
 .offers-left h1 {
   color: #171717;
-  font-size: 3vw;
+  font-size: 80px;
   font-weight: 600;
 }
 
 .offers-left p {
   color: #171717;
-  font-size: 1.2vw;
+  font-size: 22px;
   font-weight: 600;
 }
 
 .offers-left button {
-  width: 16vw;
-  height: 8vh;
+  width: 282px;
+  height: 70px;
   border-radius: 35px;
   background: #ff4141;
   border: none;
   color: white;
-  font-size: 1.3vw;
+  font-size: 22px;
   font-weight: 500;
-  margin-top: 5vh;
+  margin-top: 30px;
   cursor: pointer;
 }
 
@@ -45,9 +45,100 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-top: 10vh;
+  padding-top: 50px;
 }
 
-.offers-right img {
+/* .offers-right img {
   width: 80%;
+} */
+
+@media (max-width: 1280px) {
+  .offers {
+    padding: 0px 80px;
+    margin-bottom: 120px;
+  }
+  .offers-left h1 {
+    font-size: 40px;
+  }
+  .offers-left p {
+    font-size: 18px;
+  }
+  .offers-right img {
+    width: 300px;
+  }
+  .offers-left button {
+    width: 220px;
+    height: 50px;
+    font-size: 18px;
+  }
+  .offers-right {
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .offers {
+    padding: 0px 60px;
+    margin-bottom: 80px;
+    height: 40vh;
+  }
+  .offers-left h1 {
+    font-size: 30px;
+  }
+  .offers-left p {
+    font-size: 16px;
+  }
+  .offers-right img {
+    width: 200px;
+  }
+  .offers-left button {
+    width: 160px;
+    height: 40px;
+    font-size: 16px;
+  }
+  .offers-right {
+    padding-top: 10px;
+  }
+}
+
+@media (max-width: 800px) {
+  .offers {
+    margin-bottom: 60px;
+  }
+  .offers-left h1 {
+    font-size: 22px;
+  }
+  .offers-left p {
+    font-size: 13px;
+  }
+  .offers-right img {
+    width: 180px;
+  }
+  .offers-left button {
+    width: 140px;
+    height: 30px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 500px) {
+  .offers {
+    height: 25vh;
+    margin-bottom: 50px;
+  }
+  .offers-left h1 {
+    font-size: 16px;
+  }
+  .offers-left p {
+    font-size: 10px;
+  }
+  .offers-right img {
+    width: 120px;
+  }
+  .offers-left button {
+    width: 120px;
+    height: 25px;
+    font-size: 10px;
+    margin-top: 12px;
+  }
 }
